@@ -1,5 +1,6 @@
 package uk.gov.hmcts.darts.cases.repository;
 
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Limit;
@@ -22,21 +23,21 @@ import java.util.function.Function;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class CaseRepositoryIntTest extends IntegrationBase {
-    protected static final String SOME_COURTHOUSE = "SOME-COURTHOUSE";
-    protected static final String SOME_ROOM = "some-room";
-    protected static final String SOME_CASE_NUMBER_1 = "CASE1";
-    protected static final String SOME_CASE_NUMBER_2 = "CASE2";
+    private static final String SOME_COURTHOUSE = "SOME-COURTHOUSE";
+    private static final String SOME_ROOM = "some-room";
+    private static final String SOME_CASE_NUMBER_1 = "CASE1";
+    private static final String SOME_CASE_NUMBER_2 = "CASE2";
 
     private final OffsetDateTime testTime = OffsetDateTime.of(2020, 10, 10, 10, 0, 0, 0, ZoneOffset.UTC);
 
     @Autowired
-    CourtCaseStub caseStub;
+    private CourtCaseStub caseStub;
 
     @Autowired
-    CaseRepository caseRepository;
+    private CaseRepository caseRepository;
 
     @Test
-    void testFindByIsRetentionUpdatedTrueAndRetentionRetriesLessThan() {
+    void findByIsRetentionUpdatedTrueAndRetentionRetriesLessThan_ReturnsResults() {
         // given
         caseStub.createAndSaveCourtCase(courtCase -> {
             courtCase.setRetentionUpdated(true);
@@ -60,11 +61,11 @@ class CaseRepositoryIntTest extends IntegrationBase {
 
         // then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(matchingCase.getId());
+        assertThat(result.getFirst().getId()).isEqualTo(matchingCase.getId());
     }
 
     @Test
-    void testFindCasesNeedingCaseDocumentGeneratedPaged() {
+    void findCasesIdsNeedingCaseDocumentGenerated_Paged() {
         // given
         caseStub.createAndSaveCourtCase(courtCase -> {
             courtCase.setClosed(true);
@@ -92,22 +93,20 @@ class CaseRepositoryIntTest extends IntegrationBase {
         });
         dartsDatabase.getCaseDocumentStub().createCaseDocumentEntity(courtCaseWithCaseDocument, courtCaseWithCaseDocument.getCreatedBy());
 
-        caseStub.createAndSaveCourtCase(courtCase -> {
-            courtCase.setClosed(false);
-        });
+        caseStub.createAndSaveCourtCase(courtCase -> courtCase.setClosed(false));
 
         // when
-        List<CourtCaseEntity> result = caseRepository.findCasesNeedingCaseDocumentGenerated(
+        List<Integer> result = caseRepository.findCasesIdsNeedingCaseDocumentGenerated(
             OffsetDateTime.now().minusDays(28), Limit.of(2));
 
         // then
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).getId()).isEqualTo(matchingCase1.getId());
-        assertThat(result.get(1).getId()).isEqualTo(matchingCase2.getId());
+        assertThat(result.getFirst()).isEqualTo(matchingCase1.getId());
+        assertThat(result.get(1)).isEqualTo(matchingCase2.getId());
     }
 
     @Test
-    void testFindCasesNeedingCaseDocumentGeneratedUnpaged() {
+    void findCasesIdsNeedingCaseDocumentGenerated_Unpaged() {
         // given
         caseStub.createAndSaveCourtCase(courtCase -> {
             courtCase.setClosed(true);
@@ -120,9 +119,7 @@ class CaseRepositoryIntTest extends IntegrationBase {
         });
         dartsDatabase.getCaseDocumentStub().createAndSaveCaseDocumentEntity(courtCaseWithCaseDocument);
 
-        caseStub.createAndSaveCourtCase(courtCase -> {
-            courtCase.setClosed(false);
-        });
+        caseStub.createAndSaveCourtCase(courtCase -> courtCase.setClosed(false));
 
         var matchingCase1 = caseStub.createAndSaveCourtCase(courtCase -> {
             courtCase.setClosed(true);
@@ -142,23 +139,44 @@ class CaseRepositoryIntTest extends IntegrationBase {
         assertThat(dartsDatabase.getCaseRepository().findAll()).hasSize(6);
 
         // when
-        List<CourtCaseEntity> result = caseRepository.findCasesNeedingCaseDocumentGenerated(
+        List<Integer> result = caseRepository.findCasesIdsNeedingCaseDocumentGenerated(
             OffsetDateTime.now().minusDays(28), Limit.unlimited());
 
         // then
         assertThat(result).hasSize(3);
-        assertThat(result.get(0).getId()).isEqualTo(matchingCase1.getId());
-        assertThat(result.get(1).getId()).isEqualTo(matchingCase2.getId());
-        assertThat(result.get(2).getId()).isEqualTo(matchingCase3.getId());
+        assertThat(result.getFirst()).isEqualTo(matchingCase1.getId());
+        assertThat(result.get(1)).isEqualTo(matchingCase2.getId());
+        assertThat(result.get(2)).isEqualTo(matchingCase3.getId());
     }
 
 
     @Test
-    void testFindCasesNeedingCaseDocumentForRetentionDateGenerationPagedSuccess() {
+    void findCasesNeedingCaseDocumentForRetentionDateGeneration_PagedSuccess() {
         // given
+        Function<Boolean, CourtCaseEntity> createValidCourtCase = getCourtCaseEntityFunction();
 
+        CourtCaseEntity courtCase1 = createValidCourtCase.apply(true);
+        CourtCaseEntity courtCase2 = createValidCourtCase.apply(false);
+        CourtCaseEntity courtCase3 = createValidCourtCase.apply(true);
+        CourtCaseEntity courtCase4 = createValidCourtCase.apply(false);
+
+        OffsetDateTime currentTimestamp = OffsetDateTime.now();
+        // when
+        List<Integer> result = caseRepository.findCasesNeedingCaseDocumentForRetentionDateGeneration(
+            currentTimestamp.plusDays(28), currentTimestamp.minusDays(28), Limit.of(4));
+
+        // then
+        assertThat(result).hasSize(4);
+        assertThat(result.getFirst()).isEqualTo(courtCase2.getId());
+        assertThat(result.get(1)).isEqualTo(courtCase4.getId());
+        assertThat(result.get(2)).isEqualTo(courtCase1.getId());
+        assertThat(result.get(3)).isEqualTo(courtCase3.getId());
+
+    }
+
+    private @NotNull Function<Boolean, CourtCaseEntity> getCourtCaseEntityFunction() {
         AtomicInteger suffix = new AtomicInteger(1);
-        Function<Boolean, CourtCaseEntity> createValidCourtCase = (isRetentionUpdated) -> {
+        return (isRetentionUpdated) -> {
             String caseNumber = "CASE" + suffix.getAndIncrement();
             CourtCaseEntity courtCase = dartsDatabase.createCase(SOME_COURTHOUSE, caseNumber);
 
@@ -177,28 +195,10 @@ class CaseRepositoryIntTest extends IntegrationBase {
             return dartsDatabase.save(courtCase);
         };
 
-        CourtCaseEntity courtCase1 = createValidCourtCase.apply(true);
-        CourtCaseEntity courtCase2 = createValidCourtCase.apply(false);
-        CourtCaseEntity courtCase3 = createValidCourtCase.apply(true);
-        CourtCaseEntity courtCase4 = createValidCourtCase.apply(false);
-
-
-        OffsetDateTime currentTimestamp = OffsetDateTime.now();
-        // when
-        List<Integer> result = caseRepository.findCasesNeedingCaseDocumentForRetentionDateGeneration(
-            currentTimestamp.plusDays(28), currentTimestamp.minusDays(28), Limit.of(4));
-
-        // then
-        assertThat(result).hasSize(4);
-        assertThat(result.get(0)).isEqualTo(courtCase2.getId());
-        assertThat(result.get(1)).isEqualTo(courtCase4.getId());
-        assertThat(result.get(2)).isEqualTo(courtCase1.getId());
-        assertThat(result.get(3)).isEqualTo(courtCase3.getId());
-
     }
 
     @Test
-    void returnIsRetentionUpdatedFirst() {
+    void findCasesNeedingCaseDocumentForRetentionDateGeneration_returnIsRetentionUpdatedFirst() {
         // given
         CourtCaseEntity courtCaseEntityWithNoCaseDocuments = dartsDatabase.createCase(SOME_COURTHOUSE, SOME_CASE_NUMBER_1);
 
@@ -236,13 +236,13 @@ class CaseRepositoryIntTest extends IntegrationBase {
 
         // then
         assertThat(result).hasSize(2);
-        assertThat(result.get(0)).isEqualTo(courtCaseEntityWithNoCaseDocuments.getId());
+        assertThat(result.getFirst()).isEqualTo(courtCaseEntityWithNoCaseDocuments.getId());
         assertThat(result.get(1)).isEqualTo(courtCaseEntityWithCaseDocument.getId());
 
     }
 
     @Test
-    void testFindCasesNeedingCaseDocumentForRetentionDateGenerationPagedWhereRetentionDateToFarInTheFuture() {
+    void findCasesNeedingCaseDocumentForRetentionDateGeneration_WhereRetentionDateToFarInTheFuture() {
         // given
         CourtCaseEntity courtCaseEntityWithNoCaseDocuments = dartsDatabase.createCase(SOME_COURTHOUSE, SOME_CASE_NUMBER_1);
 
@@ -279,7 +279,7 @@ class CaseRepositoryIntTest extends IntegrationBase {
     }
 
     @Test
-    void testFindCasesNeedingCaseDocumentForRetentionDateGenerationPagedWithRecentDocuments() {
+    void findCasesNeedingCaseDocumentForRetentionDateGeneration_WithRecentDocuments() {
         // given
         CourtCaseEntity courtCaseEntityWithCaseDocuments1 = dartsDatabase.createCase(SOME_COURTHOUSE, SOME_CASE_NUMBER_1);
 
@@ -325,7 +325,7 @@ class CaseRepositoryIntTest extends IntegrationBase {
     }
 
     @Test
-    void testFindOpenCasesToClosePaged() {
+    void findCasesNeedingCaseDocumentGenerated_FindOpenCasesToClosePaged() {
         // given
         caseStub.createAndSaveCourtCase(courtCase -> {
             courtCase.setClosed(false);
@@ -348,25 +348,31 @@ class CaseRepositoryIntTest extends IntegrationBase {
         });
 
         // when
-        List<CourtCaseEntity> result = caseRepository.findCasesNeedingCaseDocumentGenerated(
+        List<Integer> result = caseRepository.findCasesIdsNeedingCaseDocumentGenerated(
             OffsetDateTime.now().minusDays(28), Limit.of(2));
 
         // then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(foundCourtCase1.getId());
+        assertThat(result.getFirst()).isEqualTo(foundCourtCase1.getId());
     }
 
     @Test
-    void findAllWithIdMatchingOneOf_shouldReturn() {
+    void findAllWithIdMatchingOneOf_ReturnsResults() {
+        // given
         CourtCaseEntity case1 = dartsDatabase.createCase(SOME_COURTHOUSE, SOME_CASE_NUMBER_1);
         dartsDatabase.createCase(SOME_COURTHOUSE, SOME_CASE_NUMBER_2);
         CourtCaseEntity case3 = dartsDatabase.createCase(SOME_COURTHOUSE, "SOME_CASE_NUMBER_3");
+        CourtCaseEntity case4 = dartsDatabase.createCase(SOME_COURTHOUSE, "SOME_CASE_NUMBER_0");
 
+        // when
         List<CourtCaseEntity> returnedCourtCases = caseRepository.findAllWithIdMatchingOneOf(List.of(
-            case1.getId(), case3.getId()
+            case1.getId(), case3.getId(), case4.getId()
         ));
-        assertThat(returnedCourtCases).hasSize(2);
-        assertThat(returnedCourtCases.get(0).getId()).isEqualTo(case3.getId());
-        assertThat(returnedCourtCases.get(1).getId()).isEqualTo(case1.getId());
+
+        // then
+        assertThat(returnedCourtCases).hasSize(3);
+        assertThat(returnedCourtCases.getFirst().getId()).isEqualTo(case3.getId());
+        assertThat(returnedCourtCases.get(1).getId()).isEqualTo(case4.getId());
+        assertThat(returnedCourtCases.get(2).getId()).isEqualTo(case1.getId());
     }
 }
